[gd_scene load_steps=2 format=2]

[ext_resource path="res://Src/Interstitial.gd" type="Script" id=1]

[node name="Interstitial" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="EndScreen" type="CanvasLayer" parent="."]

[node name="EndLevel" type="Label" parent="EndScreen"]
visible = false
margin_left = 511.376
margin_top = 99.7806
margin_right = 551.376
margin_bottom = 113.781
text = "Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndLives" type="Label" parent="EndScreen"]
visible = false
margin_left = 509.693
margin_top = 130.648
margin_right = 549.693
margin_bottom = 144.648
text = "Lives"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndCoins" type="Label" parent="EndScreen"]
visible = false
margin_left = 508.981
margin_top = 161.138
margin_right = 548.981
margin_bottom = 175.138
text = "Coins"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndBullets" type="Label" parent="EndScreen"]
visible = false
margin_left = 508.386
margin_top = 187.3
margin_right = 553.386
margin_bottom = 201.3
text = "Bullets"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndEnemies" type="Label" parent="EndScreen"]
visible = false
margin_left = 508.981
margin_top = 213.463
margin_right = 563.981
margin_bottom = 227.463
text = "Enemies"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndPowerups" type="Label" parent="EndScreen"]
visible = false
margin_left = 509.575
margin_top = 241.409
margin_right = 571.575
margin_bottom = 255.409
text = "Powerups"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
margin_left = 489.93
margin_top = 269.273
margin_right = 539.93
margin_bottom = 283.273
rect_scale = Vector2( 3.04529, 3.1133 )
custom_colors/font_color = Color( 0.14902, 0.898039, 0.886275, 1 )
text = "Level: 0"
__meta__ = {
"_edit_use_anchors_": false
}
